mux-compiler/tests/snapshots/executable_integration__executable_integration__parser_dangling_comma.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/mux_compiler run /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_dangling_comma.mux`
error: Expected expression, found 'CloseBracket'
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_dangling_comma.mux:2:19
   |
 2 | auto x = [1, 2, 3,]
   |                   ^
